--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,5 @@ jobs:
       - name: Reiniciar servidor con pm2
         run: |
           ssh -p 16939 -o StrictHostKeyChecking=yes estebancalcagno@0.tcp.sa.ngrok.io \
-            'cd ~/sitios/mi-web-cicd && /Users/estebancalcagno/.nvm/versions/node/v19.4.0/bin/pm2 restart mi-web || /Users/estebancalcagno/.nvm/versions/node/v19.4.0/bin/pm2 start server.js --name mi-web'
-
-      
+          'bash -c "source ~/.bash_profile && cd ~/sitios/mi-web-cicd && pm2 restart mi-web || pm2 start server.js --name mi-web"'
       
